Add Supabase auth: login, signup, callback pages + navbar buttons

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
 # DegenBot Environment Variables
 
 # Supabase
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+NEXT_PUBLIC_SUPABASE_URL=https://puwyhdyrqtxrxmecxrdo.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_JYyCP91zBlnKmzlAOWjiDw_rTHmsYS2
 
 # Solana RPC (Helius)
-NEXT_PUBLIC_SOLANA_RPC_URL=https://mainnet.helius-rpc.com/?api-key=your_api_key
+NEXT_PUBLIC_SOLANA_RPC_URL=https://mainnet.helius-rpc.com/?api-key=your_helius_api_key
 NEXT_PUBLIC_SOLANA_NETWORK=mainnet-beta
+
+# DegenBot Payment Wallet (SOL payments for subscriptions go here)
+DEGENBOT_PAYMENT_WALLET=7VWUqa2MWXpBiTzrpkZH3E3ipt4VfH78sZ2T6n6N2oDi
 
 # DexScreener API
 DEXSCREENER_API_URL=https://api.dexscreener.com/latest
