--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=https://puwyhdyrqtxrxmecxrdo.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_JYyCP91zBlnKmzlAOWjiDw_rTHmsYS2
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
 # Solana RPC (Helius)
 NEXT_PUBLIC_SOLANA_RPC_URL=https://mainnet.helius-rpc.com/?api-key=your_helius_api_key
@@ -16,3 +17,23 @@ DEXSCREENER_API_URL=https://api.dexscreener.com/latest
 
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# ============================================
+# COPY TRADING (DegenCopyTradingBot) - NEW!
+# ============================================
+
+# Helius API Key (for webhooks & token metadata)
+HELIUS_API_KEY=your_helius_api_key
+HELIUS_WEBHOOK_ID=your_webhook_id_after_setup
+
+# AI Analysis (supports both Gemini and OpenAI)
+# Use GEMINI_API_KEY if you have a Google API key
+# Use OPENAI_API_KEY if you have an OpenAI key
+GEMINI_API_KEY=your_gemini_api_key
+OPENAI_API_KEY=sk-your-openai-key
+
+# Copy Trading Settings
+COPY_TRADE_ENABLED=true
+MAX_BUY_SOL=0.1
+AI_SCORE_THRESHOLD=80
+DEFAULT_SLIPPAGE_BPS=100
